--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -80,15 +80,6 @@ p {
           order: 1;
 }
 
-.colorShift {
-  z-index: 0;
-  height: 105vh;
-  width: 100vw;
-  top: 100vh;
-  position: absolute;
-  background: white;
-}
-
 .galleryContainer {
   left: 30vw;
   height: 100%;
@@ -236,6 +227,15 @@ p {
           transition-delay: 1.2s;
 }
 
+.colorShift {
+  z-index: 0;
+  height: 105vh;
+  width: 100vw;
+  top: 100vh;
+  position: absolute;
+  background: white;
+}
+
 /* CARD LAYOUT */
 /* CARD LAYOUT */
 /* CARD LAYOUT */
@@ -287,10 +287,7 @@ p {
 }
 
 .card {
-  -webkit-box-ordinal-group: 4;
-      -ms-flex-order: 3;
-          order: 3;
-  z-index: 1;
+  z-index: 5;
   width: 100vw;
   height: auto;
   margin: 5em;
@@ -337,9 +334,9 @@ p {
       align-self: center;
   width: 14em;
   padding: 7em 11em 0 9em;
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
 }
 
 /* BUTTONS */
@@ -461,17 +458,8 @@ p {
   p {
     font-size: 0.9em;
   }
-  .section-div {
-    height: 50vh;
-    width: 100vw;
-    margin: 0;
-    background: #000000;
-    -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2;
-  }
   .galleryContainer {
-    height: 62vh;
+    height: 75vh;
     width: 100vw;
     margin: 0;
     overflow: hidden;
@@ -480,8 +468,10 @@ p {
             order: 1;
   }
   .galleryImg {
-    height: 62vh;
+    height: 75vh;
     width: 100vw;
+    -webkit-filter: brightness(50%) contrast(80%);
+            filter: brightness(50%) contrast(80%);
   }
   #top {
     left: 0;
@@ -489,56 +479,103 @@ p {
   #next {
     left: 0;
   }
-  .circle-btn--container {
-    top: 52vh;
+  .galleryText {
+    top: 22vh !important;
+    left: 0 !important;
+    margin: 0 12vw;
+    width: 18em !important;
+  }
+  .textContainer {
+    text-align: center;
+  }
+  .textContainer h3 {
+    padding: 1em 0 0 0;
+  }
+  .textContainer p {
+    width: inherit;
+  }
+  .section-div {
+    height: 25vh;
+    width: 100vw;
+    margin: 0;
+    background: #000000;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  /* BUTTONS */
+  /* BUTTONS */
+  /* BUTTONS */
+  .btn--flex {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+    position: relative;
+    margin: 0 17.5vw;
+    top: -16.66667vh;
+    width: 65vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .btn--flex .circle-btn--container {
+    top: 0;
+    position: relative;
+  }
+  .btn--flex .circle-btn--container .circle-btn--outer {
+    width: 40px;
+    height: 40px;
   }
   .left {
-    left: 5vw;
+    left: 0;
   }
   .right {
-    left: 72vw;
-  }
-  .circle-btn--outer {
-    width: 60px;
-    height: 60px;
+    left: 0;
   }
   /* CARD LAYOUT */
   /* CARD LAYOUT */
   /* CARD LAYOUT */
+  .colorShift {
+    height: 100vh;
+  }
   .card {
-    width: 85vw;
-    margin: 0 auto;
-    -ms-grid-columns: (7em)[10] auto;
-        grid-template-columns: repeat(10, 7em) auto;
-    -ms-grid-rows: (3em)[15];
-        grid-template-rows: repeat(15, 3em);
-  }
-  .card h2 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 4;
-    grid-column: 1 / span 4;
-    -ms-grid-row: 12;
-    -ms-grid-row-span: 3;
-    grid-row: 12 / span 3;
-    margin: 10px;
-  }
-  .card p {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1 / span 2;
-    -ms-grid-row: 13;
-    -ms-grid-row-span: 2;
-    grid-row: 13 / span 2;
-    margin: 10px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0;
   }
   .card img {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    -o-object-fit: contain;
+       object-fit: contain;
     height: auto;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 4;
-    grid-column: 1 / span 4;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 4;
-    grid-row: 1 / span 4;
+    width: 80vw;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .flexText {
+    padding: 2em;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
 }
+
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
+/* PORTRAIT QUERY */
 /*# sourceMappingURL=2_gallery_style.css.map */
