--- a/2_gallery_style.scss
+++ b/2_gallery_style.scss
@@ -1,3 +1,7 @@
+
+
+
+
 /*  Variables
     Nesting
     Partials
@@ -259,40 +263,6 @@ $img-width: 70vw;
 /* CARD LAYOUT */
 /* CARD LAYOUT */
 
-/* .card {
-    order: 3;
-
-    width: 90vw;
-    height: auto;
-    margin: 5em;
-
-    overflow: hidden;
-
-    // box-shadow: 0px 5px 20px 0px #ebebeb;
-    // border-radius: 30px;
-
-    display: grid;
-    grid-template-columns: repeat(10, 7em) auto;
-    grid-template-rows: repeat(10, 3em);
-
-    h2 {
-        grid-column: 2 / span 4;
-        grid-row: 5 / span 3;
-
-    }
-    p {
-        grid-column: 2 / span 2;
-        grid-row: 7 / span 2;
-
-    }
-    img {
-        height: 250%;
-        grid-column: 7 / span 4;
-        grid-row: 1 / span 4;
-    }
-}
-*/
-
 
 .flexContainer {
     position: absolute;
@@ -302,51 +272,94 @@ $img-width: 70vw;
     flex-direction: column;
     width: 100vw;
     height: auto;
+
+    h2 {
+        //margin: 0 auto;
+        //width: 9em;
+        //font-size: 1.5em;
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
+        align-self: flex-start;
+        transform: rotate(180deg);
+    }
 }
+
+$flexText-width: 60em;
 
 .card {
     z-index: $z-tier1;
 
-    width: 100vw;
+    width: $flexText-width;
     height: auto;
-    margin: 5em;
-    align-self: center;
+    //margin: 5em;
+    margin-left: 10vw;
+    margin-top: -18em;
+    //align-self: center;
 
     overflow: hidden;
     //box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
 
-    h2 {
-        margin: 0;
-        width: 9em;
-    }
+
     p {
-        margin: 10px 0;
+        margin: 1em 2em 0 0;
+        font-size: 1.3em;
+        width: #{$flexText-width/2};
     }
     img {
-        height: 25em;
-        order: 2;
+        width: #{$flexText-width/1.5};
+        margin: 0 0 1em 0;
+        order: 0;
+
+        object-fit: contain;
     }
 }
 
 .flexText {
     display: flex;
     flex-direction: column;
-    align-self: center;
+    //align-self: center;
 
-    width: 14em;
-    padding: 7em 11em 0 9em;
+    width: $flexText-width;
+    //padding: 0em 5em 0 5em;
 
     order: 1;
+    
+    div {
+        display: flex;
+        width: auto;
+    }
 }
 
+.section-2 {
+    z-index: $z-tier1;
+    width: 42vw;
+    height: auto;
+    align-self: center;
+    margin-top: 12em;
+    text-align: center;
+}
 
+.mediaLinks {
+    display: flex;
+    justify-content: space-between;
 
-
-
+    margin: 0;
+	width: 100%;
+	height: 10em;
+	
+    p {
+        font-weight: bold;
+        transition: all .4s cubic-bezier(0, 1, 0.35, 1.5);
+        cursor: pointer;
+    }
+    p:hover {
+         transform: rotate3d(0.5, 1, 0, 25deg);
+    }
+}
 
 
 
@@ -469,7 +482,7 @@ $triangleSize: 6px;
     }
         body{
             flex-direction: column;
-            background:     $test-color-1;
+            background:     $background-color;
         }
 
         h1 {
@@ -607,6 +620,8 @@ $triangleSize: 6px;
         .flexText {
             padding: 2em;
             order: 2;
+
+            width: 15em;
         }
 
 
