--- a/3_project_style.css
+++ b/3_project_style.css
@@ -167,9 +167,9 @@ h4 {
 }
 
 .card {
-  -webkit-box-ordinal-group: 4;
-      -ms-flex-order: 3;
-          order: 3;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
   z-index: 1;
   width: 78vw;
   height: auto;
@@ -215,5 +215,65 @@ h4 {
   -webkit-transition: all 1s;
   transition: all 1s;
   opacity: 0;
+}
+
+/* FOOTER */
+/* FOOTER */
+/* FOOTER */
+/* FOOTER */
+.section-2 {
+  z-index: 5;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  width: 42vw;
+  height: auto;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-top: 12em;
+  text-align: center;
+}
+
+.section-2 h4 {
+  -webkit-perspective: none;
+          perspective: none;
+  position: relative;
+  width: 100%;
+  top: 0 !important;
+  left: 0 !important;
+}
+
+.mediaLinks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0;
+  width: 100%;
+  height: 10em;
+}
+
+.mediaLinks p {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.mediaLinks div {
+  -webkit-perspective: none;
+          perspective: none;
+  height: auto;
+  width: auto;
+  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0, 1, 0.35, 1.5);
+  transition: -webkit-transform 0.4s cubic-bezier(0, 1, 0.35, 1.5);
+  transition: transform 0.4s cubic-bezier(0, 1, 0.35, 1.5);
+  transition: transform 0.4s cubic-bezier(0, 1, 0.35, 1.5), -webkit-transform 0.4s cubic-bezier(0, 1, 0.35, 1.5);
+}
+
+.mediaLinks div:hover {
+  -webkit-transform: rotate3d(0.5, 1, 0, 0.015deg);
+          transform: rotate3d(0.5, 1, 0, 0.015deg);
 }
 /*# sourceMappingURL=3_project_style.css.map */
