--- a/3_project_style.scss
+++ b/3_project_style.scss
@@ -230,7 +230,7 @@ h4 {
 }
 
 .card {
-    order: 3;
+    order: 1;
     z-index: 1;
 
     width: 78vw;
@@ -264,15 +264,63 @@ h4 {
     width: 13em;
     padding: 8em 4em 0 12em;
 
-    order:2;
+    order:2;    
 }
-
-
-
 
 .inactiveInitial {
     //transform-style:preserve-3d;
     transition: all 1s;
     opacity: 0;
     //@include parallax(-.5);
+}
+
+
+
+
+/* FOOTER */
+/* FOOTER */
+/* FOOTER */
+/* FOOTER */
+
+.section-2 {
+    z-index: $z-tier1;
+    order: 2;
+
+    width: 42vw;
+    height: auto;
+    align-self: center;
+    margin-top: 12em;
+    text-align: center;
+
+    h4 {
+        perspective: none;
+        position: relative;
+
+        width: 100%;
+        top: 0 !important;
+        left: 0 !important;
+    }
+}
+
+.mediaLinks {
+    display: flex;
+    justify-content: space-between;
+
+    margin: 0;
+	width: 100%;
+	height: 10em;
+
+    p {
+        font-weight: bold;
+        cursor: pointer;
+    }
+    div {
+        perspective: none;
+        height: auto;
+        width: auto;
+        transition: transform .4s cubic-bezier(0, 1, 0.35, 1.5);
+    }
+    div:hover {
+         transform: rotate3d(0.5, 1, 0, .015deg);
+    }
 }
