--- a/3_project_style.scss
+++ b/3_project_style.scss
@@ -211,6 +211,9 @@ h1 {
 h4 {
     @include parallax(-.85);
 }
+.mosquito {
+    @include parallax(.5);
+}
 
 
 
@@ -227,6 +230,17 @@ h4 {
     flex-direction: column;
     width: 100vw;
     height: auto;
+}
+
+.mosquito {
+    font-size: 1.3em;
+    font-weight: 300;
+    margin: 0;
+    position: absolute;
+    top: 275vh;
+    left: 50.5vw;
+    z-index: 100;
+    color: whitesmoke;
 }
 
 .card {
