--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -40,13 +40,13 @@ h2 {
 
 h3 {
   font-size: 2em;
-  font-family: Roboto Condensed;
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
 }
 
 h4 {
   font-size: 1em;
-  font-family: Roboto Condensed;
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
   letter-spacing: .25em;
 }
@@ -98,47 +98,56 @@ p {
 }
 
 .gallerySlide {
-  visibility: hidden;
-  -webkit-transition: top 1s cubic-bezier(0.5, 0.2, 0.15, 1), left 1s cubic-bezier(0.5, 0.2, 0.15, 1), width 1s cubic-bezier(0.5, 0.2, 0.15, 1), -webkit-clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1), -webkit-filter 3s cubic-bezier(0.5, 0.2, 0.15, 1);
-  transition: top 1s cubic-bezier(0.5, 0.2, 0.15, 1), left 1s cubic-bezier(0.5, 0.2, 0.15, 1), width 1s cubic-bezier(0.5, 0.2, 0.15, 1), -webkit-clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1), -webkit-filter 3s cubic-bezier(0.5, 0.2, 0.15, 1);
-  transition: clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1), top 1s cubic-bezier(0.5, 0.2, 0.15, 1), left 1s cubic-bezier(0.5, 0.2, 0.15, 1), width 1s cubic-bezier(0.5, 0.2, 0.15, 1), filter 3s cubic-bezier(0.5, 0.2, 0.15, 1);
-  transition: clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1), top 1s cubic-bezier(0.5, 0.2, 0.15, 1), left 1s cubic-bezier(0.5, 0.2, 0.15, 1), width 1s cubic-bezier(0.5, 0.2, 0.15, 1), filter 3s cubic-bezier(0.5, 0.2, 0.15, 1), -webkit-clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1), -webkit-filter 3s cubic-bezier(0.5, 0.2, 0.15, 1);
+  opacity: 0;
+  -webkit-transition: -webkit-clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: -webkit-clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1), -webkit-clip-path 0.7s cubic-bezier(0.5, 0.2, 0.15, 1);
+  will-change: clip-path;
 }
 
 .transitionPage {
-  position: absolute !important;
-  top: 75vh !important;
-  left: 20vw !important;
   background-color: white;
-  width: 80vw;
-  height: 300vh;
-  -webkit-filter: brightness(2000);
-          filter: brightness(2000);
+  -webkit-transform: scaleX(10) translateX(-100vw);
+          transform: scaleX(10) translateX(-100vw);
+  opacity: 0 !important;
+  -webkit-filter: brightness(1000);
+          filter: brightness(1000);
+  -webkit-transition: opacity 1s ease 500ms, -webkit-transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, -webkit-filter 4s ease;
+  transition: opacity 1s ease 500ms, -webkit-transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, -webkit-filter 4s ease;
+  transition: transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, filter 4s ease, opacity 1s ease 500ms;
+  transition: transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, filter 4s ease, opacity 1s ease 500ms, -webkit-transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, -webkit-filter 4s ease;
 }
 
-.animate {
+.animateClipPath {
   -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%) !important;
           clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%) !important;
 }
 
+.inactiveInitial {
+  opacity: 0;
+}
+
 #top {
-  visibility: visible !important;
+  opacity: 1;
   z-index: 10;
   position: absolute;
   left: 30vw;
   top: 0;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
           clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  will-change: clip-path;
 }
 
 #next {
-  visibility: visible !important;
+  opacity: 1;
   z-index: 0;
   position: absolute;
   left: 30vw;
   top: 0;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
           clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  will-change: clip-path;
 }
 
 .galleryImg {
@@ -156,6 +165,15 @@ p {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+}
+
+.textContainer .inactiveInitial {
+  opacity: 0;
+}
+
+.textContainer .inactiveFinal {
+  opacity: 0;
+  margin-top: 8px;
 }
 
 .textContainer .galleryText {
@@ -178,15 +196,6 @@ p {
           justify-content: top;
   -webkit-transition: opacity 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
   transition: opacity 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
-}
-
-.textContainer .inactiveInitial {
-  opacity: 0;
-}
-
-.textContainer .inactiveFinal {
-  opacity: 0;
-  margin-top: 8px;
 }
 
 .textContainer h1 {
