--- a/3_project_style.css
+++ b/3_project_style.css
@@ -128,6 +128,16 @@ p {
           transform: translateZ(-0.5px) scale(1.5);
 }
 
+.contentScrollPost {
+  -webkit-transform: translateX(-1vw);
+          transform: translateX(-1vw);
+  opacity: 0 !important;
+  -webkit-transition: opacity 1s ease 500ms, -webkit-transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, -webkit-filter 4s ease;
+  transition: opacity 1s ease 500ms, -webkit-transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, -webkit-filter 4s ease;
+  transition: transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, filter 4s ease, opacity 1s ease 500ms;
+  transition: transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, filter 4s ease, opacity 1s ease 500ms, -webkit-transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, -webkit-filter 4s ease;
+}
+
 .flexText {
   -webkit-transform: translateZ(-0.3px) scale(1.3);
           transform: translateZ(-0.3px) scale(1.3);
