--- a/3_project_style.css
+++ b/3_project_style.css
@@ -12,6 +12,7 @@ body {
           perspective: 1px;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
+  -webkit-overflow-scrolling: touch;
 }
 
 body, body * {
@@ -37,7 +38,7 @@ h1 {
   font-weight: 400;
   color: white;
   margin: 0;
-  position: fixed;
+  position: absolute;
   left: 10vw;
   top: 30vh;
 }
@@ -50,7 +51,7 @@ h2 {
 h3 {
   z-index: 0;
   font-size: 2em;
-  font-family: Roboto Condensed;
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: 700;
   letter-spacing: .15em;
   font-variant: all-small-caps;
@@ -63,11 +64,11 @@ h3 {
 
 h4 {
   font-size: 1em;
-  font-family: Roboto Condensed;
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
   letter-spacing: .25em;
   margin: 0;
-  position: fixed;
+  position: absolute;
   left: 45vw;
   top: 50vh;
 }
@@ -76,6 +77,14 @@ p {
   font-size: 0.9em;
   font-weight: 300;
   margin: 0;
+}
+
+a {
+  color: rgba(91, 196, 238, 0.753);
+}
+
+a:visited {
+  color: pink;
 }
 
 .galleryNav {
@@ -124,14 +133,11 @@ p {
   height: 300vh;
   -webkit-box-shadow: 0 0 10em 8em black;
           box-shadow: 0 0 10em 8em black;
-  -webkit-transform: translateZ(-0.5px) scale(1.5);
-          transform: translateZ(-0.5px) scale(1.5);
+  -webkit-transform: translateZ(-0.5px) translateX(0) scale(1.5);
+          transform: translateZ(-0.5px) translateX(0) scale(1.5);
 }
 
 .contentScrollPost {
-  -webkit-transform: translateX(-1vw);
-          transform: translateX(-1vw);
-  opacity: 0 !important;
   -webkit-transition: opacity 1s ease 500ms, -webkit-transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, -webkit-filter 4s ease;
   transition: opacity 1s ease 500ms, -webkit-transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, -webkit-filter 4s ease;
   transition: transform 0.5s cubic-bezier(1, -0.01, 1, 1) 300ms, filter 4s ease, opacity 1s ease 500ms;
@@ -139,28 +145,28 @@ p {
 }
 
 .flexText {
-  -webkit-transform: translateZ(-0.3px) scale(1.3);
-          transform: translateZ(-0.3px) scale(1.3);
+  -webkit-transform: translateZ(-0.3px) translateX(0) scale(1.3);
+          transform: translateZ(-0.3px) translateX(0) scale(1.3);
 }
 
 img {
-  -webkit-transform: translateZ(-0.2px) scale(1.2);
-          transform: translateZ(-0.2px) scale(1.2);
+  -webkit-transform: translateZ(-0.2px) translateX(0) scale(1.2);
+          transform: translateZ(-0.2px) translateX(0) scale(1.2);
 }
 
 h1 {
-  -webkit-transform: translateZ(-1px) scale(2);
-          transform: translateZ(-1px) scale(2);
+  -webkit-transform: translateZ(-1px) translateX(0) scale(2);
+          transform: translateZ(-1px) translateX(0) scale(2);
 }
 
 h4 {
-  -webkit-transform: translateZ(-0.85px) scale(1.85);
-          transform: translateZ(-0.85px) scale(1.85);
+  -webkit-transform: translateZ(-0.85px) translateX(0) scale(1.85);
+          transform: translateZ(-0.85px) translateX(0) scale(1.85);
 }
 
 .mosquito {
-  -webkit-transform: translateZ(0.5px) scale(0.5);
-          transform: translateZ(0.5px) scale(0.5);
+  -webkit-transform: translateZ(0.5px) translateX(0) scale(0.5);
+          transform: translateZ(0.5px) translateX(0) scale(0.5);
 }
 
 /* CARD LAYOUT */
@@ -202,7 +208,6 @@ h4 {
   margin: 5em;
   -ms-flex-item-align: center;
       align-self: center;
-  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -220,6 +225,7 @@ h4 {
   -webkit-box-ordinal-group: 2;
       -ms-flex-order: 1;
           order: 1;
+  margin: 2em;
 }
 
 .flexText {
