--- a/2_gallery_style.scss
+++ b/2_gallery_style.scss
@@ -23,7 +23,7 @@ $h1-size: 5em;      /* gallery title */
 $h2-size: 3em;      /* card title */
 $h3-size: 2em;     /* gallery support text */
 $h4-size: 1em;     /* card support text */
-$p-size:  1em;
+$p-size:  1.2em;
 
 $duration-text: .8s;
 $duration-image: .7s;
@@ -76,6 +76,13 @@ h4 {
 p {
     font-size: $p-size;
     font-weight: 300;
+}
+
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: pink;
 }
 
 #grid {
@@ -133,7 +140,7 @@ p {
 
     transform: scaleX(10) translateX(-100vw);
     opacity: 0 !important;
-    filter: brightness(1000);
+    filter: brightness(2000);
 
     transition: transform #{$duration-page / 2} cubic-bezier(1,-0.01, 1, 1) 300ms,
                 filter #{$duration-page + 3} ease,
@@ -203,7 +210,7 @@ $img-width: 70vw;
 
         position: absolute;
         margin-right: 25vw; 
-        top: 40vh;
+        top: 30vh;
         left: 10vw;
 
         height: auto;
@@ -383,13 +390,13 @@ $flexText-width: 60em;
 
 $btn-border-color: #ffffff;
 
-$btn-size: 5em;
+$btn-size: 4em;
 $btn-weight-px: 3px;
 
 .circle-btn--container {
     z-index: $z-tier4;
     position: absolute;
-    top: 80vh;
+    top: 63vh;
     
     cursor: pointer;
     
@@ -463,7 +470,67 @@ $triangleSize: 6px;
     height: 0;
 }
 
+.btnExpandProj {
+    position: absolute;
+    left: 76vw;
+    top: 83vh;
+    z-index: $z-tier4;
+    color: white;
 
+    h3 {
+        font-size: 2em;
+        font-family: $font-accent;
+        font-weight: 700;
+        letter-spacing: .15em;
+        font-variant: all-small-caps;
+    }    
+
+    svg {
+        z-index: $z-tier4;
+
+        position: relative;
+        top: -4.6em;
+        left: -.9em;
+        margin-top: 0;
+        width: 16.5em;
+        height: 3em;
+        overflow: visible;
+
+        rect {
+            width: inherit;
+            height: inherit;
+
+            fill: rgba(255, 255, 255, 0);
+            stroke: white;
+
+            stroke-width: 0;
+            stroke-dasharray: 8em;
+            stroke-dashoffset: 0;
+
+            transition: all 1s $bezier;    
+            
+            &:hover {
+                stroke-dasharray: 39em;
+                stroke-width:.2em
+            }
+        }
+    }
+}
+
+#about {
+    position: absolute;
+    left: 10vw;
+    top: 83vh;
+    z-index: $z-tier4;
+
+    font-size: 2em;
+    font-family: $font-accent;
+    font-weight: 400;
+    letter-spacing: .15em;
+    font-variant: all-small-caps;
+
+
+}
 
 
 
