--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -9,6 +9,16 @@
 /* card title */
 /* gallery support text */
 /* card support text */
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE and Edge */
+* {
+  -ms-overflow-style: none;
+}
+
 body {
   height: auto;
   width: 100vw;
@@ -225,7 +235,7 @@ a:visited {
 }
 
 .textContainer h4 {
-  margin: 0;
+  margin: 0 0 .3em 0;
   padding-left: 0.3em;
   -webkit-transition: 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
   transition: 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
@@ -387,7 +397,8 @@ a:visited {
 .circle-btn--container {
   z-index: 100;
   position: absolute;
-  top: 63vh;
+  top: 89vh;
+  opacity: .6;
   cursor: pointer;
 }
 
@@ -407,11 +418,11 @@ a:visited {
 }
 
 .left {
-  left: 35vw;
+  left: 28vw;
 }
 
 .right {
-  left: 50vw;
+  left: 44vw;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
 }
@@ -419,7 +430,7 @@ a:visited {
 .circle-btn--outer {
   width: 4em;
   height: 4em;
-  border: 3px solid #ffffff;
+  border: 0px solid #ffffff;
   border-radius: 50%;
   -webkit-transition: opacity 0.7s cubic-bezier(0.5, 0, 0, 1), -webkit-transform 0.7s cubic-bezier(1, 0, 0.25, 1), -webkit-transform 0.7s cubic-bezier(0.5, 0, 0, 1);
   transition: opacity 0.7s cubic-bezier(0.5, 0, 0, 1), -webkit-transform 0.7s cubic-bezier(1, 0, 0.25, 1), -webkit-transform 0.7s cubic-bezier(0.5, 0, 0, 1);
@@ -478,7 +489,7 @@ a:visited {
 .btnExpandProj {
   position: absolute;
   left: 76vw;
-  top: 83vh;
+  top: 86vh;
   z-index: 100;
   color: white;
 }
@@ -521,10 +532,10 @@ a:visited {
 
 #about {
   position: absolute;
-  left: 10vw;
-  top: 83vh;
+  left: 2vw;
+  top: 90vh;
   z-index: 100;
-  font-size: 2em;
+  font-size: 1em;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
   letter-spacing: .15em;
