--- a/2_gallery_style.css
+++ b/2_gallery_style.css
@@ -254,6 +254,13 @@ a:visited {
           transition-delay: 1.2s;
 }
 
+.textContainer span {
+  -webkit-transition: 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  transition: 0.8s cubic-bezier(0.5, 0.2, 0.15, 1);
+  -webkit-transition-delay: 2s;
+          transition-delay: 2s;
+}
+
 .colorShift {
   z-index: 0;
   height: 105vh;
